k8s/_archive/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mana-archive
  namespace: mana-archive
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mana-archive
  template:
    metadata:
      labels:
        app: mana-archive
    spec:
      containers:
        - name: mana-archive
          image: ghcr.io/jasonvandeventer/mana-archive:v2.0.9
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: mana-archive-data
              mountPath: /data
      volumes:
        - name: mana-archive-data
          persistentVolumeClaim:
            claimName: mana-archive-data
